# drf-starter

./: .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.circleci/: config.yml
.dependabot/: config.yml
.github/: dependabot.yml
project/: .coveragerc  .dockerignore  .env-template  dev.Dockerfile  manage.py  prod.Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  runtests.sh
project/locale/: README.md
project/requirements/: dev.in  dev.txt  prod.in  prod.txt  test.in  test.txt
project/server/: __init__.py  asgi.py  celery.py  storages.py  urls.py  wsgi.py
project/server/settings/: common.py  dev.py  prod.py  test.py
project/sql/: create_db.sql  drop_db.sql
project/tests/test_server/: test_storages.py
project/tests/test_users/: test_serializers.py  test_views.py
project/users/: admin.py  models.py  serializers.py  views.py
project/users/migrations/: 0001_initial.py
